[tool.poetry]
name = "puppetparser"
version = "0.2.7"
description = "A parser from Puppet to an object model"
authors = ["Nuno Saavedra <nuno.saavedra@tecnico.ulisboa.pt>"]
license = "GPL-3.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only", 
]
keywords = ["puppet", "parser", "object model"]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/Nfsaavedra/puppetparser/issues"
"Source" = "https://github.com/Nfsaavedra/puppetparser"

[tool.poetry.dependencies]
python = "^3.9"
ply = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
stubPath = "stubs"
exclude = ["tests", ".venv"]